# Reyams_FirstProj

./: .gitignore  Eda.py  README.md  data.csv  documentation.txt  education_resources.csv  main.py  pyproject.toml
my_env/: README.md
