[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "education-resources-customizer"
version = "0.1.0"
description = "A Python CLI app to customize and visualize educational resources"
authors = [
    { name="Reyam", email="example@email.com" }
]
dependencies = [
    "pandas",
    "matplotlib"
]
